增加环境变量配置